--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/drawer": "^7.5.2",
+    "@react-navigation/native": "^7.1.14",
     "expo": "~53.0.12",
     "expo-dev-client": "~5.2.1",
     "expo-device": "~7.1.4",
@@ -19,8 +23,14 @@
     "expo-three": "^8.0.0",
     "react": "19.0.0",
     "react-native": "0.79.4",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-sensors": "^7.3.6",
-    "three": "^0.166.0"
+    "react-native-svg-charts": "^4.0.1",
+    "three": "^0.166.0",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
