--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-sensors": "^7.3.6",
+    "react-native-svg": "^6.2.1",
     "react-native-svg-charts": "^4.0.1",
-    "three": "^0.166.0",
-    "react-native-svg": "15.11.2"
+    "three": "^0.166.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
